[gd_scene load_steps=5 format=3 uid="uid://coldxw4jprlcx"]

[ext_resource type="Texture2D" uid="uid://c870upwsbhdqu" path="res://assets/world/bkgd_start_menu.png" id="1_d1j55"]
[ext_resource type="Script" path="res://levels_and_objects/start_menu/screen_startmenu.gd" id="1_sivjl"]
[ext_resource type="Texture2D" uid="uid://diy6odb4toxmj" path="res://assets/world/start_menu_gear.png" id="2_hrqnn"]
[ext_resource type="Texture2D" uid="uid://oc01dryq4s16" path="res://assets/world/start_menu_wrench.png" id="3_ayg6b"]

[node name="startscreen" type="Node2D"]
script = ExtResource("1_sivjl")

[node name="StartMenuBkgd" type="Sprite2D" parent="."]
position = Vector2(0, -52)
scale = Vector2(0.912226, 0.885429)
texture = ExtResource("1_d1j55")

[node name="StartMenuGear" type="Sprite2D" parent="."]
position = Vector2(0, -84)
scale = Vector2(0.433705, 0.433705)
texture = ExtResource("2_hrqnn")

[node name="StartMenuWrench" type="Sprite2D" parent="."]
position = Vector2(0, -84)
scale = Vector2(0.471475, 0.471475)
texture = ExtResource("3_ayg6b")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="btn_start" type="Button" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 111.0
offset_right = 100.0
offset_bottom = 143.0
grow_horizontal = 2
text = "START"

[node name="btn_options" type="Button" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 151.0
offset_right = 100.0
offset_bottom = 183.0
grow_horizontal = 2
text = "OPTIONS"

[node name="btn_quit" type="Button" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 191.0
offset_right = 100.0
offset_bottom = 223.0
grow_horizontal = 2
text = "QUIT"

[connection signal="pressed" from="btn_start" to="." method="_on_btn_start_pressed"]
[connection signal="pressed" from="btn_options" to="." method="_on_btn_options_pressed"]
[connection signal="pressed" from="btn_quit" to="." method="_on_btn_quit_pressed"]
